--- a/rapport.tex
+++ b/rapport.tex
@@ -17,6 +17,8 @@
 \usepackage{subcaption}
 \usepackage{tikz}
 \usepackage{xcolor}
+\usepackage{booktabs}
+\usepackage{multirow}
 
 \newcommand{\pp}{\varphi}
 \newcommand{\ppt}{\tilde{\varphi}}
@@ -257,17 +259,17 @@ solutions de manière visible et feront ici 25 intervalles.
 Enfin, il faut une estimation de la fiabilité de nos résultats. Pour ce faire,
 on va procéder par intervalle de fluctuation à 95\%. L'intervalle de fluctuation à 95\% donne l'intervalle de valeurs dans lequel 95\% de nos mesures doivent être, en postulant que la théorie (notre code est juste) est vrai.
 
-Pour ce faire, on considère la variable aléatoire $X$ nous donnant le nombre de 
+Pour ce faire, on considère la variable aléatoire $X$ nous donnant le nombre de
 particules dans l'intervalle $I_i = [x_i,x_{i+1}]$. Cette variable aléatoire
 suit une loi binomiale de paramètre $N$ le nombre total de particules et
 $p_{i|\mu_0}$ la probabilité d'un succès, qui est donné par :
 \begin{equation*}
-	p_{i|\mu_0} = \int_{I_i} \frac{\psi(x,\mu_0)}{\int_0^1 \psi(y,\mu_0)dy}dx = 
-	\int_{I_i} \Sigma_S \psi(x,\mu_0)dx 
+	p_{i|\mu_0} = \int_{I_i} \frac{\psi(x,\mu_0)}{\int_0^1 \psi(y,\mu_0)dy}dx =
+	\int_{I_i} \Sigma_S \psi(x,\mu_0)dx
 \end{equation*}
 
 Ainsi, l'espérance et la variance de $X$ sont $\mathbb{E} ( X ) = N
-p_{i|\mu_0}$ et $\mathbb{V}\mathrm{ar} (X) = N p_{i|\mu_0} (1-p_{i|\mu_0})$.
+	p_{i|\mu_0}$ et $\mathbb{V}\mathrm{ar} (X) = N p_{i|\mu_0} (1-p_{i|\mu_0})$.
 
 Ainsi, pour une seule particule, on peut faire les estimations suivantes :
 \begin{equation*}
@@ -626,7 +628,7 @@ Pour résoudre le problème spatial général en $\pp$ qui est $\mu \pp '(x) + \
 
 On intègre l'équation spatiale sur chaque maille ce qui donne $N$ relations
 
-\begin{equation} 
+\begin{equation}
 	\label{eq:vfinis.1}
 	\mu \left( \pp_{i+1} - \pp_i \right) + \st^i dx\  \ppb_i = \bar{Q}^i
 \end{equation}
@@ -703,7 +705,7 @@ On peut faire les mêmes analyses que dans le cas de la source ponctuelle. On af
 On reprend le cas du matériau non homogène de la partie \ref{sec:nonhomog.MC}.
 La solution théorique est toujours la même mais cette fois-ci nous n'avons plus
 besoin de modifier le solveur pour prendre en compte les variations de $\st$
-puisque l'équation (\ref{eq:phiplus}) est déjà écrite avec $\st^i$. 
+puisque l'équation (\ref{eq:phiplus}) est déjà écrite avec $\st^i$.
 
 Il faut bien attention à fournir au solveur une liste de $\st^i$ de la taille du nombre de mailles et à couper le domaine de façon à conserver $\st^i$ constant par maille. Comme ici $\st$ change de valeur en $0.3$ et $0.7$, il suffit de prendre un nombre de mailles multiple de 10 en $x$ pour être certain d'éviter tout problème avec la définition des $\st^i$.
 
@@ -738,8 +740,8 @@ l'équation (\ref{eq.transport}) sera vérifiée. L'intégrale en angle est alor
 approchée par une formule de quadrature. Nous choisissons ici pour méthode de
 quadrature la méthode des rectangles qui nous permet de répartir les $\mu_k$ de
 manière homogène sur tout l'intervalle $[-1;1]$. On a alors $\mu_k = (k +
-1/2)d\mu - 1$ où $d\mu = \frac{2}{N_\mu}$ et $k \in \{0,\dots ,N_{\mu}-1\}$. Le
-poids associé à chaque $\mu_k$ est le même : $d\mu$. 
+	1/2)d\mu - 1$ où $d\mu = \frac{2}{N_\mu}$ et $k \in \{0,\dots ,N_{\mu}-1\}$. Le
+poids associé à chaque $\mu_k$ est le même : $d\mu$.
 
 On a alors $\forall 0 \leqslant k \leqslant N_\mu-1$
 \begin{equation}
@@ -766,12 +768,12 @@ La figure (\ref{fig:q12.MC.deter}) montre les résultats par simulation
 Monte-Carlo et déterministe. Nous avons fixé $\eta=10^{-9}$ et l'algorithme
 avait convergé en $46$ itérations. La courbe déterministe est bien plus lisse
 que la courbe M0nte-Carlo et obtenue en un temps bien inférieur :  3 secondes
-pour Monte-Carlo et 0.2 secondes pour le code déterministe. 
+pour Monte-Carlo et 0.2 secondes pour le code déterministe.
 
 \vspace{0.2cm}
-Pour étudier l'impact des paramètres du calcul déterministe on peut se donner un cas très raffiné ($N_x$ et $N_\mu$ très grands), prendre cette simulation comme référence et regarder l'erreur commise par rapport à cette référence pour des paramètres bien plus petits. Pour faire varier $N_x$ cela demande d'interpoler notre solution moins raffinée sur le maillage plus raffiné. Comme nous avons déjà regardé l'impact de $N_x$ sur les simulations nous préférons nous concentrer sur $N_\mu$. 
+Pour étudier l'impact des paramètres du calcul déterministe on peut se donner un cas très raffiné ($N_x$ et $N_\mu$ très grands), prendre cette simulation comme référence et regarder l'erreur commise par rapport à cette référence pour des paramètres bien plus petits. Pour faire varier $N_x$ cela demande d'interpoler notre solution moins raffinée sur le maillage plus raffiné. Comme nous avons déjà regardé l'impact de $N_x$ sur les simulations nous préférons nous concentrer sur $N_\mu$.
 
-On prend $N_\mu=10^4$ de référence et on regarde pour des $N_\mu$ au moins $10$ fois plus petits. On remarque d'abord que le nombre d'itérations reste globalement le même. On a ensuite une convergence de cette pseudo-erreur comme visible sur la figure (\ref{fig:q12.Nmu}). Il nous est difficile d'expliquer la pente de $\frac{3}{2}$. 
+On prend $N_\mu=10^4$ de référence et on regarde pour des $N_\mu$ au moins $10$ fois plus petits. On remarque d'abord que le nombre d'itérations reste globalement le même. On a ensuite une convergence de cette pseudo-erreur comme visible sur la figure (\ref{fig:q12.Nmu}). Il nous est difficile d'expliquer la pente de $\frac{3}{2}$.
 
 \begin{figure}[ht!]
 	\centering
@@ -835,12 +837,14 @@ soit $\ppt_0(x)$ un polynôme d'ordre 2 en $x$ de la forme $\ppt_0(x) = -\frac{3
 
 On regarde la solution obtenue pour plusieurs $\epsilon$ ainsi que le nombre d'itérations nécessaires pour converger à $\nu=10^{-7}$ près avec $N_x=1000$ points en $x$ et $N_\mu=100$ arcs de cercles. Nous avons choisit ce paramètre de manière à avoir une solution le plus précise possible dans des temps de calcul raisonnables. Voici les résultats dans le tableau ci-dessous
 
-\vspace{0.1cm}
-\begin{tabular}{cccc}
-	$\bm{\epsilon}$              & 1                                 & 0.1 & 0.01  \\
-	\textbf{Nombre d'itérations} & 1 itération : cas sans scattering & 368 & 19875
-\end{tabular}
-\vspace{0.2cm}
+\begin{table}[h]
+	\centering
+	\begin{tabular}{cccc}\toprule
+		$\bm{\epsilon}$              & 1  & 0.1 & 0.01  \\ \midrule
+		\textbf{Nombre d'itérations} & 32 & 505 & 25243 \\\bottomrule
+	\end{tabular}
+\end{table}
+
 
 Le nombre d'itérations nécessaires pour arriver à la précision souhaitée augmente très rapidement avec $\epsilon$ qui diminue. On voit donc bien l'intérêt de mettre en place une méthode d'accélération comme par exemple l'accélération par diffusion synthétique.
 
@@ -908,6 +912,22 @@ pour toute au début l'algorithme. Ainsi, même si le calcul de la décompositio
 de Cholesky est effectuée en $\mathcal{O} (N_x^3)$ opérations, la résolution de ce
 système est effectuée en $\mathcal{O} (N_x^2)$ opérations pendant l'algorithme.
 
+\bigskip
+
+L'accélération synthétique permet d'accélérer\footnote{heureusement} grandement
+le calcul dns le cas de la limite de diffusion comme cela peut être vu dans le
+tableau (\ref{tab:comp_dsa}).
+
+\begin{table}[hb]
+	\centering
+	\begin{tabular}{cccc}\toprule
+		$\bm{\epsilon}$ & 1 (sans absorption) & 0.1 & 0.01  \\\midrule
+		Sans DSA        & 32                  & 505 & 25243 \\
+		Avec DSA        & 24                  & 27  & 23    \\\bottomrule
+	\end{tabular}
+	\caption{Nombre d'itération avec et sans accélération. Les paramètres de simulations sont $\nu = 10^{-7}$, $N_x = 1000$ points, et $N_\mu = 100$ arcs de cercles.}
+	\label{tab:comp_dsa}
+\end{table}
 
 
 \end{document}
