--- a/rapport.tex
+++ b/rapport.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,draft]{article}
+\documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
@@ -19,6 +19,7 @@
 \usepackage{xcolor}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{placeins}
 
 \newcommand{\pp}{\varphi}
 \newcommand{\ppt}{\tilde{\varphi}}
@@ -916,9 +917,9 @@ système est effectuée en $\mathcal{O} (N_x^2)$ opérations pendant l'algorithm
 
 L'accélération synthétique permet d'accélérer\footnote{heureusement} grandement
 le calcul dns le cas de la limite de diffusion comme cela peut être vu dans le
-tableau (\ref{tab:comp_dsa}).
+tableau ci-dessus.
 
-\begin{table}[hb]
+\begin{table}[h]
 	\centering
 	\begin{tabular}{cccc}\toprule
 		$\bm{\epsilon}$ & 1 (sans absorption) & 0.1 & 0.01  \\\midrule
@@ -926,8 +927,25 @@ tableau (\ref{tab:comp_dsa}).
 		Avec DSA        & 24                  & 27  & 23    \\\bottomrule
 	\end{tabular}
 	\caption{Nombre d'itération avec et sans accélération. Les paramètres de simulations sont $\nu = 10^{-7}$, $N_x = 1000$ points, et $N_\mu = 100$ arcs de cercles.}
-	\label{tab:comp_dsa}
 \end{table}
 
+\FloatBarrier
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Conclusion}
+
+Nous avons pu comparer au cours de ce projet deux méthodes très différentes :
+une méthode Monte-Carlo et une méthode déterministe. 
+
+Chacune des deux méthodes a des avantages et des inconvénients. La méthode
+Monte-Carlo permet par exemple de simuler le problème sans discrétisation en
+angle et se généralise bien en 3D mais la méthode converge relativement
+lentement. 
+
+Tandis que la méthode
+déterministe plus rapide dans notre cas et converge mieux mais doit malgré tout être accélérée
+artificiellement et nécessite de discrétiser en angle, ce qui peut rapidement
+devenir problématique en 3D. 
 
 \end{document}
